--- a/app/views/public/cart_products/index.html.erb
+++ b/app/views/public/cart_products/index.html.erb
@@ -1,7 +1,7 @@
 <h2>ショッピングカート</h2>
 
-<% if @cart_products.present? %>
-<%= link_to "カートを空にする", cart_product_path, method: :delete, class:"btn btn-danger btn-cart_product_all_destroy" %>
+
+<%= link_to "カートを空にする", cart_products_path, method: :delete, class:"btn btn-danger btn-cart_product_all_destroy" %>
 
 <table class="table">
   <thead>
@@ -30,7 +30,7 @@
         <% end %>
       </td>
       <td>
-        <%= cart_product.amount.to_i * cart_product.product.excluding_tax_price.to_i %>
+        <%= cart_product.amount * cart_product.product.excluding_tax_price %>
       </td>
       <td>
         <%= link_to " 削除する", cart_product_path(cart_product), method: :delete, class:"btn btn-danger btn-cart_product_destroy" %>
@@ -44,14 +44,9 @@
   <%= link_to " 買い物を続ける", root_path, class:"btn btn-primary btn-root" %>
   <table class="table">
     <td>合計金額</td>
-    <td><%= @cart_product.total_price(@cart_product.product) %></td>
+    <td><%= total_price(@cart_products) %></td>
   </table>
 </p>
 
 <p><%= link_to " 情報入力に進む", new_order_path, class:"btn btn-success btn-order_new" %></p>
 
-<% else %>
-  <p>ショッピングカートに商品がありません。</p>
-  <p><%= link_to "商品一覧", products_path, class: "btn-primary" %></p
-
-<% end %>
