--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -216,6 +216,45 @@ body{
 .admin-show{
   margin-left: 190px;
 }
+.admin-products-show{
+  border-collapse: separate;
+  border-spacing: 80px 10px;
+  white-space: nowrap;
+  vertical-align: middle;
+}
+.admin-products-show1{
+  display: flex;
+  margin-top: 80px;
+}
+.admin-products-show2{
+  text-align: center;
+  .btn-success{
+    padding: 10px 30px;
+    margin-top: 20px;
+  }
+}
+.admin-products-edit{
+  border-collapse: separate;
+  border-spacing: 30px 10px;
+  white-space: nowrap;
+  vertical-align: middle;
+  .btn-success{
+    padding: 10px 30px;
+    margin-top: 20px;
+  }
+}
+.admin-products-edit1{
+  margin-left: 410px;
+}
+
+.public-products{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.public-products1{
+  margin: 20px;
+}
 
 // ジャンル
 .genre{
