--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,38 +1,46 @@
-<h2>商品編集</h2>
-  <%= form_with model:@product, url: admin_product_path, local:true, method: :patch do |f| %> 
-    <div class="form-group">
-      <h5>商品画像</h5>
-      <%= f.attachment_field :image, class: 'image' %>
-    </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="marker">商品編集</h2>
+          <%= form_with model:@product, url: admin_product_path, local:true, method: :patch do |f| %>
+            <table class="admin-products-edit" style= "width: 900px;margin: 0 auto;">
+              <tr>
+                <td><h5>商品画像</h5></td>
+                <td><%= f.attachment_field :image,class: 'image' %></td>
+              </tr>
 
-    <div class="form-group">
-      <h5>商品名</h5>
-      <%= f.text_field :name, autofocus: true, id:"name", placeholder:"商品名"%>
-      </div>
+              <tr>
+                <td><h5>商品名</h5></td>
+                <td><%= f.text_field :name, autofocus: true, size: "40" , id:"name", placeholder:"商品名"%></td>
+              </tr>
 
-    <div class="form-group">
-      <h5>商品説明</h5>
-      <%= f.text_area :body, autofocus: true, id:"body", placeholder:"商品説明"%>
-    </div>
+              <tr>
+                <td><h5>商品説明</h5></td>
+                <td><%= f.text_area :body, autofocus: true, size: "40x5" , id:"body", placeholder:"商品説明"%></td>
+              </tr>
 
-    <div class="form-group">
-      <h5>ジャンル</h5>
-      <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "選択して下さい" %>
-    </div>
+              <tr>
+                <td><h5>ジャンル</h5></td>
+                <td><%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "選択して下さい" %></td>
+              </tr>
 
-    <div class="form-group">
-      <h5>税抜価格</h5>
-      <%= f.text_field :excluding_tax_price, autofocus: true, id:"body", placeholder:"1000"%>
-    </div>
-    
-    <div class="form-group">
-      <h5>販売ステータス</h5>
-      <label><%= f.radio_button :sale_status, true %><%= f.label :sale_status, "販売中", {value: :true, style: "display: inline-block;"} %></label>
-      <label><%= f.radio_button :sale_status, false %><%= f.label :sale_status, "販売停止中", {value: :false, style: "display: inline-block;"} %></label>
-    </div>
+              <tr>
+                <td><h5>税抜価格</h5></td>
+                <td><%= f.text_field :excluding_tax_price, autofocus: true, size: "40" , id:"body", placeholder:"1000"%></td>
+              </tr>
+
+              <tr>
+                <td><h5>販売ステータス</h5></td>
+                <td><label><%= f.radio_button :sale_status, true %><%= f.label :sale_status, "販売中", {value: :true, style: "display: inline-block;"} %></label>
+                    <label><%= f.radio_button :sale_status, false %><%= f.label :sale_status, "販売停止中", {value: :false, style: "display: inline-block;"} %></label></td>
+              </tr>
 
 
-    <div class="form-group">
-      <%= f.submit "変更を保存" %>
+            </table>
+              <div class="admin-products-edit1">
+                <%= f.submit "変更を保存" , class: "btn btn-success btn-lg" %>
+              </div>
+          <% end %>
     </div>
-  <% end %>
+  </div>
+</div>
