--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,33 +1,44 @@
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="marker">商品詳細</h2>
 
-<%= attachment_image_tag @product, :image, :fill, 200, 300, format: 'png', fallback: "cake.jpg" %></td>
+        <div class="admin-products-show1">
+          <%= attachment_image_tag @product, :image, :fill , format: 'png', size: "300x200" ,fallback: "cake.jpg" %></td>
 
-  <table class = "table">
-    <tr>
-      <td>商品名</td>
-      <td><h5 class="product-name"><%= @product.name %></h5></td>
-    </tr>
-    <tr>
-      <td>商品説明</td>
-      <td><h5 class="product-body"><%= @product.body %></h5></td>
-    </tr>
-    <tr>
-      <td>ジャンル</td>
-      <td><h5 class="product-genre"><%= @product.genre.name %></h5></td>
-    </tr>
-    <tr>
-      <td>税込価格（税抜き価格）</td>
-      <td><h5 class="product-price"><%= @product.excluding_tax_price %></h5></td>
-    </tr>
-    <tr>
-      <td>販売ステータス</td>
-      <td>
-        <% if @product.sale_status == false %>
-          <p><i class="text-secondary"></i>販売停止中</p>
-        <% else %>
-          <p><i class="text-success"></i>販売中</p>
-        <% end %>
-      </td>
-    </tr>
-  </table>
+            <table class = "admin-products-show" >
+              <tr>
+                <td>商品名</td>
+                <td><h5 class="product-name"><%= @product.name %></h5></td>
+              </tr>
+              <tr>
+                <td>商品説明</td>
+                <td><h5 class="product-body"><%= @product.body %></h5></td>
+              </tr>
+              <tr>
+                <td>ジャンル</td>
+                <td><h5 class="product-genre"><%= @product.genre.name %></h5></td>
+              </tr>
+              <tr>
+                <td>税込価格（税抜き価格）</td>
+                <td><h5 class="product-price"><%= @product.excluding_tax_price %></h5></td>
+              </tr>
+              <tr>
+                <td>販売ステータス</td>
+                <td>
+                  <% if @product.sale_status == false %>
+                    <p><i class="text-secondary"></i>販売停止中</p>
+                  <% else %>
+                    <p><i class="text-success"></i>販売中</p>
+                  <% end %>
+                </td>
+              </tr>
+            </table>
 
-<%= link_to "編集する", edit_admin_product_path(@product), class: "btn btn-success" %>
+        </div>
+        <div class="admin-products-show2">
+          <%= link_to "編集する", edit_admin_product_path(@product), class: "btn btn-success btn-lg"%>
+        </div>
+    </div>
+  </div>
+</div>
