--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -2,16 +2,20 @@
   <div class="row">
     <div class="col-md-12">
       <h2 class="marker">商品一覧</h2>
-    <% @products.each do |product| %>
-        <%= link_to product_path(product.id) do %>
-            <%= attachment_image_tag product, :image, :fill, 150, 250, format: 'png', fallback: "cake.jpg" %>
-        <% end %>
-        <%= link_to product.name, product_path(product) %>
-        <h3 class="product-price"><%= product.excluding_tax_price %></h3>
-    <% end %>
+      <div class="public-products">
+          <% @products.each do |product| %>
+        <div class="public-products1">
+              <%= link_to product_path(product.id) do %>
+                  <%= attachment_image_tag product, :image, :fill, size:'235x180' , format: 'png', fallback: "cake.jpg" %>
+              <% end %>
 
-<%= link_to '商品を検索する', products_path %>
-<%= paginate @products %>
+                <p><%= link_to product.name, product_path(product) %></p>
+                <h3 class="product-price">¥<%= product.excluding_tax_price %></h3>
+        </div>
+          <% end %>
+      </div>
+          <%= link_to '商品を検索する', products_path %>
+          <%= paginate @products %>
     </div>
   </div>
 </div>
